--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,46 @@
 [app]
-name = Android Emulator - sq_Pixel_2_API_28:5554
-exe = C:\Users\sq\AppData\Local\Android\Sdk\emulator\emulator.exe
-params = -avd sq_Pixel_2_API_28 -netfast
-dir = C:\Users\sq\AppData\Local\Android\Sdk\emulator\
+; name = Android Emulator - sq_Pixel_2_API_24:5554
+; exe = C:\Users\administrator\AppData\Local\Android\Sdk\emulator\emulator.exe
+; params = -avd sq_Pixel_2_API_24 -netfast
+; dir = C:\Users\administrator\AppData\Local\Android\Sdk\emulator\
+name = BlueStacks App Player
+exe = E:\Program Files (x86)\BluestacksCN\BluestacksGP.exe
+params = 
+dir = E:\Program Files (x86)\BluestacksCN\
 
 ;应用程序调整后的位置
-left = 1500
-top = 450
+; left = 950
+; top = 5
+; width = 416
+; height = 751
+left = 946
+top = 2
 width = 416
-height = 751
+height = 768
 
 [game]
-area_width = 403
+area_width = 402
 area_height = 716
-box_top = 514
-box_bottom = 645
+; top_space = 34
+top_space = 44
+; left_space = 8
+left_space = 5
+; box_top = 514
+box_top = 518
+; box_bottom = 645
+box_bottom = 649
 box_width = 92
 box_height = 114
 box_space = 10
+
+[offset]
+;ocr时间时偏移量
+time_left = 27
+time_top = 9
+time_right = 97
+time_bottom = 22
+
+[common]
+exe_time = 35
+app_time = 40
+debug = 1
